--- a/Editor/UI.uxml
+++ b/Editor/UI.uxml
@@ -1,37 +1,23 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/Database/Editor/DatabaseEditor.uss?fileID=7433441132597879392&amp;guid=ecd889ccae0e6ba44aabe336b5124eee&amp;type=3#DatabaseEditor" />
-    <ui:VisualElement style="flex-grow: 1; flex-basis: initial;">
-        <ui:Label tabindex="-1" text="GAME DATABASE" parse-escape-sequences="true" display-tooltip-when-elided="true" style="justify-content: center; align-items: auto; -unity-text-align: middle-center; font-size: 31px; background-color: rgb(46, 45, 45); margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; height: 50px; color: rgb(106, 106, 106);" />
-        <ui:VisualElement name="Seperator" style="flex-grow: 1; height: 10px; align-items: flex-end; min-height: 10px; max-height: 10px; background-color: rgb(65, 65, 65);" />
-        <ui:VisualElement name="TableCreationContainer" class="table-creation-container hidden">
-            <ui:VisualElement class="table-creation-row">
-                <ui:Label text="Table Name:" class="table-name-label" />
-                <ui:TextField name="TableName" class="table-name-field" />
-                <ui:DropdownField name="TypesDropdown" class="types-dropdown" />
-                <ui:Button text="Create Table" name="CreateTableButton" class="create-table-button" />
-                <ui:Button text="Refresh" name="Refresh" class="refresh-button" />
+    <ui:VisualElement class="database-editor">
+        <ui:Label text="GAME DATABASE" class="main-title" />
+        <ui:VisualElement name="Seperator" class="separator" />
+        <ui:VisualElement class="button-container">
+            <ui:Button text="Initialize" name="InitButton" class="action-button" />
+            <ui:Button text="Table" name="TableButton" class="action-button" />
+            <ui:VisualElement name="TableCreationContainer" class="table-Create-Container hidden">
+                <ui:TextField value="NewTable" name="TableTextField" class="tab-input" />
+                <ui:DropdownField name="TableTypeDropdown" class="dropdown" />
+                <ui:Button text="Create and Add Table" name="CreateTable" class="create-table-button" />
+                <ui:Button text="Create Table Class" name="CreateTableClass" class="create-class-button" />
             </ui:VisualElement>
+            <ui:Button text="Refresh" name="Refresh" class="action-button" />
         </ui:VisualElement>
-        <ui:VisualElement name="Seperator" style="flex-grow: 1; height: 10px; align-items: flex-end; min-height: 10px; max-height: 10px; background-color: rgb(65, 65, 65);" />
-        <ui:VisualElement name="VisualElement" style="flex-grow: 1; flex-direction: row; height: 50px; flex-wrap: nowrap; align-items: center; background-color: rgb(43, 41, 41); min-height: 50px; max-height: 50px;">
-            <ui:Button text="Initialize" parse-escape-sequences="true" display-tooltip-when-elided="true" name="IntButton" class="action-button" />
-            <ui:Button text="Table" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TableButton" class="action-button" />
-            <ui:VisualElement class="table-Container" style="flex-grow: 1;">
-                <ui:TextField picking-mode="Ignore" value="table name" class="tab-input" />
-                <ui:DropdownField class="tab-input" />
-                <ui:Button text="Button" parse-escape-sequences="true" display-tooltip-when-elided="true" class="tab-button" />
-            </ui:VisualElement>
-            <ui:Button text="Refresh" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Refresh" class="action-button" />
-        </ui:VisualElement>
-        <ui:VisualElement name="Seperator" style="flex-grow: 1; height: 10px; align-items: flex-end; min-height: 10px; max-height: 10px; background-color: rgb(65, 65, 65);" />
-        <ui:VisualElement name="Container" style="flex-grow: 1; background-color: rgb(42, 41, 41);">
-            <ui:VisualElement name="Tabs" class="tabs-container">
-                <ui:VisualElement name="TabTemplate" class="tab-container" style="display: none;">
-                    <ui:Button text="TabTemplate" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TabButton" class="tab-button" />
-                    <ui:Button text="X" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Crossbutton" class="close-button" />
-                </ui:VisualElement>
-            </ui:VisualElement>
-            <ui:VisualElement name="Seperator" style="flex-grow: 1; height: 10px; align-items: flex-end; min-height: 10px; max-height: 10px; background-color: rgb(65, 65, 65);" />
+        <ui:VisualElement name="Seperator" class="separator" />
+        <ui:VisualElement class="main-container">
+            <ui:VisualElement name="Tabs" class="tabs-container" />
+            <ui:VisualElement name="Seperator" class="separator" />
             <ui:ScrollView name="EditorView" class="editor-view" />
         </ui:VisualElement>
     </ui:VisualElement>
